<resources>
    <string name="app_name">Dialer</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="zero">0</string>
    <string name="estrela">*</string>
    <string name="hashTag">#</string>
    <string name="X">x</string>
    <string name="ligar">Ligar</string>

    <string name="hint">Coloque o numero</string>

</resources>