<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/primeiroLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint"
                    android:inputType="none" />

                <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="138dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#171717"
                    android:onClick="Delete"
                    android:text="@string/X"
                    android:textColor="#FF0404"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/segundoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="um"
                    android:password="false"
                    android:text="@string/um"
                    app:cornerRadius="10dp"
                    app:iconTint="#981212" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="dois"
                    android:text="@string/dois"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="tres"
                    android:text="@string/tres"
                    app:cornerRadius="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/terceiroLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="quatro"
                    android:text="@string/quatro"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="cinco"
                    android:text="@string/cinco"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="seis"
                    android:text="@string/seis"
                    app:cornerRadius="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quartoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="sete"
                    android:text="@string/sete"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="oito"
                    android:text="@string/oito"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="nove"
                    android:text="@string/nove"
                    app:cornerRadius="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quintoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/buttonEstrela"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:lineSpacingExtra="2dp"
                    android:onClick="estrela"
                    android:text="@string/estrela"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="zero"
                    android:text="@string/zero"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/buttonHash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="hashTag"
                    android:text="@string/hashTag"
                    app:cornerRadius="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sextoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/buttonLigar"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#14DA1C"
                    android:backgroundTintMode="src_in"
                    android:lineSpacingExtra="2dp"
                    android:onClick="ligar"
                    android:text="@string/ligar"
                    android:textColor="#FFFFFF"
                    app:cornerRadius="100dp"
                    app:icon="@android:drawable/stat_sys_phone_call_forward" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>